<resources>
    <string name="app_name">Bus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="home">Home</string>
    <string name="bus_timing">Bus Timing</string>
    <string name="search_bus">Search Bus</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="add_account">Add Account</string>
    <string name="logout">Logout</string>
    <string name="menu_bus_timing">Bus Timing</string>
    <string name="menu_search_bus">Search Buses</string>
    <string name="menu_feedback">Feedback</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="not_yet_registered_sign_up">SIGNUPACTIVITY</string>
    <string name="username">USERNAME\n</string>
    <string name="already_have_an_account_login_here">already_have_an_account_login_here\n</string>
    <string name="sign_up">SIGNUP</string>
    <string name="email">EMAIL</string>
    <string name="username_optional">USERNAME</string>
</resources>