<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bus.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/bus_timing"
        android:name="com.example.bus.ui.Search_Bus.Search_Bus"
        android:label="@string/menu_bus_timing"
        tools:layout="@layout/search_bus"/>

    <fragment
        android:id="@+id/search_bus"
        android:name="com.example.bus.ui.busTiming.Bus_timing"
        android:label="@string/menu_search_bus"
        tools:layout="@layout/bus_timing"/>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bus.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.bus.ui.share.ShareFragment"
        android:label="@string/share"
        tools:layout="@layout/fragment_share"/>


    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.bus.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback"/>


</navigation>
